Header break in dashboard fix v1.0

--- a/public/css/new_design/dashboard.css
+++ b/public/css/new_design/dashboard.css
@@ -259,7 +259,7 @@ input, select, textarea, button {
 }
 .headerRight {
     float: right;
-    width: 600px;
+    width: 650px;
 }
 .heaverNav ul {
     margin-top: 12px;
